# faircare_package

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHART_ACCESSIBILITY_FIX_COMPLETE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIGURE_LEGEND_REFERENCE.md  LICENSE  METRICS_REVIEW_REPORT.md  PDF_SETUP_GUIDE.md  PUBLICATION_READY.md  README.md  SECURITY.md  STATISTICAL_AUDIT_REPORT.md  VISUALIZATION_FIX_COMPLETE.md  VISUALIZATION_FIX_SUMMARY.md  pyproject.toml  test_html_charts_fix.py  test_pdf_charts_fix.py  test_pdf_output.py  test_playwright_charts.py  test_report_interactive.html
.github/workflows/: ci.yml  publish.yml
docs/: METHODOLOGY.md  README.md  USAGE.md
docs/references/: README.md
docs/reports/: CHART_ACCESSIBILITY_FIX_COMPLETE.md  DEPENDENCY_AUDIT_COMPLETE.md  DOCUMENTATION_REVIEW_v0.2.1.md  PUBLICATION_READY.md  README.md  STATISTICAL_AUDIT_REPORT.md  VERIFICATION_REPORT.md  VISUALIZATION_FIX_COMPLETE.md  VISUALIZATION_FIX_SUMMARY.md  VISUALIZATION_IMPROVEMENTS.md
examples/: icu_mortality_demo.py
notebooks/: quickstart_tutorial.ipynb
scripts/: test_playwright_charts.py
src/faircareai/: __init__.py  cli.py
src/faircareai/core/: __init__.py  audit.py  bootstrap.py  calibration.py  citations.py  config.py  constants.py  disparity.py  exceptions.py  hypothesis.py  logging.py  metrics.py  reproducibility.py  results.py  statistical.py  statistics.py  types.py
src/faircareai/dashboard/: __init__.py  app.py
src/faircareai/dashboard/components/: __init__.py  accessibility.py  audience_toggle.py  editorial_charts.py  glossary.py  nyt_charts.py
src/faircareai/dashboard/pages/: 1_upload.py  2_analysis.py  3_governance.py  4_settings.py  __init__.py
src/faircareai/data/: __init__.py  sensitive_attrs.py  synthetic.py
src/faircareai/data/chai/v0.1/: schema.xsd
src/faircareai/data/raic/: checkpoint_1.json
src/faircareai/fairness/: __init__.py  decision_tree.py
src/faircareai/metrics/: __init__.py  descriptive.py  fairness.py  group_utils.py  performance.py  subgroup.py  vancalster.py
src/faircareai/reports/: __init__.py  chai_model_card.py  figure_exports.py  generator.py  model_card.py  pptx_options.py  raic_checklist.py
src/faircareai/visualization/: __init__.py  altair_plots.py  config.py  exporters.py  governance_dashboard.py  newspec.md  performance_charts.py  plots.py  tables.py  themes.py  utils.py  vancalster_plots.py
tests/: __init__.py  conftest.py  test_audit.py  test_bootstrap.py  test_calibration.py  test_chai_model_card.py  test_core_metrics.py  test_core_statistical.py  test_decision_tree.py  test_descriptive.py  test_disparity.py  test_edge_cases.py  test_exceptions.py  test_exporters.py  test_fairness_metrics.py  test_hypothesis.py  test_input_validation.py  test_logging.py  test_performance_metrics.py  test_personas.py  test_plots_viz.py  test_quickstart_integration.py  test_raic_checklist.py  test_report_security.py  test_results.py  test_sensitive_attrs.py  test_statistical.py  test_subgroup_metrics.py  test_synthetic.py  test_tables_viz.py  test_themes.py  test_threshold_in_figures.py  test_vancalster.py  test_vancalster_plots.py  test_visualization_audit.py
