[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faircareai"
version = "0.2.0"
description = "Healthcare AI Fairness Auditing - CHAI-aligned governance for clinical ML models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FairCareAI Contributors" }
]
maintainers = [
    { name = "FairCareAI Contributors" }
]
keywords = [
    "healthcare",
    "fairness",
    "machine-learning",
    "clinical",
    "audit",
    "bias",
    "equity",
    "CHAI",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    # Data processing - pin major versions for stability
    "polars>=0.20.0,<1.0.0",
    "pyarrow>=14.0.0,<18.0.0",
    "numpy>=1.24.0,<2.0.0",  # numpy 2.0 has breaking changes

    # Visualization - Interactive
    "plotly>=5.18.0,<6.0.0",
    # Note: kaleido (Plotly static export) moved to optional deps due to platform limitations

    # Visualization - Static exports
    "altair>=5.2.0,<6.0.0",
    "vl-convert-python>=1.0.0,<2.0.0",

    # Visualization - Tables
    "great-tables>=0.3.0,<1.0.0",

    # Statistics
    "scipy>=1.11.0,<2.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "scikit-learn>=1.3.0,<2.0.0",

    # Dashboard
    "streamlit>=1.30.0,<2.0.0",
    "streamlit-extras>=0.3.0,<1.0.0",

	# Reporting
	"jinja2>=3.1.0,<4.0.0",

	# Utilities
	"rich>=13.0.0,<14.0.0",
	"click>=8.1.0,<9.0.0",
    "typing_extensions>=4.0.0,<5.0.0",  # For NotRequired in Python 3.10
]

[project.optional-dependencies]
# Static image export (optional - has platform limitations on Apple Silicon)
export = [
	"kaleido>=0.2.1,<1.0.0",  # Plotly PNG/PDF/SVG export
	"weasyprint>=60.0,<70.0",  # PDF report export
	"python-pptx>=0.6.21,<1.0.0",  # PowerPoint report export
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

# All optional dependencies
all = [
    "faircareai[export,dev]",
]

[project.scripts]
faircareai = "faircareai.cli:main"

[project.urls]
Homepage = "https://github.com/sajor2000/faircare_package"
Documentation = "https://github.com/sajor2000/faircare_package#readme"
Repository = "https://github.com/sajor2000/faircare_package"
Issues = "https://github.com/sajor2000/faircare_package/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/faircareai"]

# ==============================================================================
# Pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ==============================================================================
# Mypy Configuration
# ==============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
no_implicit_optional = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "altair.*",
    "streamlit.*",
    "great_tables.*",
    "weasyprint.*",
    "pptx.*",
]
ignore_missing_imports = true

# Relax type checking for dashboard/UI code (Streamlit apps have many Any types)
[[tool.mypy.overrides]]
module = [
    "faircareai.dashboard.*",
    "faircareai.visualization.*",
    "faircareai.reports.*",
    "faircareai.core.results",  # Results class has complex Any types from dynamic data
    "faircareai.core.audit",    # Audit class has complex dynamic data handling
    "faircareai.cli",
    "faircareai.metrics.*",     # Metrics have complex numpy array types
    "faircareai.data.*",        # Data generation utilities
]
ignore_errors = true  # Fully ignore type errors in UI/dynamic modules

# ==============================================================================
# Ruff Configuration
# ==============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument (common in callbacks)
    "C408",   # unnecessary dict() call - readability preference in Plotly code
    "SIM108", # use ternary operator - prefer explicit if/else for readability
    "SIM118", # use key in dict - minor style preference
    "B905",   # zip() without strict - requires Python 3.10+ (we support 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101", "F841", "B007", "B017", "SIM222"]  # Allow unused vars and test patterns
"__init__.py" = ["F401"]
"src/faircareai/dashboard/*" = ["E402"]  # Streamlit requires imports after st.set_page_config()

[tool.ruff.lint.isort]
known-first-party = ["faircareai"]

# ==============================================================================
# Coverage Configuration
# ==============================================================================
[tool.coverage.run]
source = ["src/faircareai"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Dashboard/UI code (Streamlit apps are tested manually)
    "*/dashboard/*",
    # Report generators (output verification, not logic)
    "*/reports/*",
    # CLI entry point (tested via integration)
    "*/cli.py",
    # Type-only modules
    "*/types.py",
    # Config constants (no logic)
    "*/visualization/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 60  # Core metrics/visualization well-tested; dashboard/UI tested manually
